# roscon-uk-2025-se-workshop

./: Dockerfile  README.md  docker-compose.yaml
bags/: aerial_3d.tar.xz  decompress.sh  gps.tar.xz  planar.tar.xz  subsea_3d.tar.xz
r2d2_description/: CMakeLists.txt  LICENSE  package.xml
r2d2_description/launch/: description.launch.py
r2d2_description/urdf/: r2d2.urdf.xml
task1/: CMakeLists.txt  LICENSE  README.md  package.xml
task1/config/: odometry.rviz  odometry.yaml  odometry_imu.rviz  odometry_imu.yaml  odometry_imu_vo.rviz  odometry_imu_vo.yaml
task1/launch/: ekf.launch  odometry.launch
task2/: CMakeLists.txt  README.md  package.xml
task2/config/: odometry.rviz  odometry.yaml  odometry_modified_pnc.rviz  odometry_modified_pnc.yaml  odometry_vo.yaml  odometry_vo_diff.rviz  odometry_vo_diff.yaml
task2/launch/: ekf.launch
task3/: CMakeLists.txt  README.md  package.xml
task3/config/: two_tier.rviz  two_tier.yaml
task3/launch/: ekf.launch  ekf.launch.xml
task4/: CMakeLists.txt  README.md  package.xml
task4/config/: two_tier_gps.rviz  two_tier_gps.yaml
task4/launch/: ekf.launch
task5/: CMakeLists.txt  README.md  package.xml
task5/config/: subsea_3d.rviz  subsea_3d.yaml
task5/launch/: ekf.launch
task6/: CMakeLists.txt  README.md  package.xml
task6/config/: odometry.rviz  odometry.yaml  odometry_imu.rviz  odometry_imu.yaml  odometry_imu_vo.rviz  odometry_imu_vo.yaml
task6/launch/: fls.launch
task7/: CMakeLists.txt  README.md  package.xml
task7/config/: two_tier.rviz  two_tier.yaml
task7/launch/: fls.launch.xml
task8/: CMakeLists.txt  README.md  fuse_plugins.xml  package.xml
task8/config/: two_tier.rviz  two_tier.yaml
task8/include/task8/: beacon_sensor_model.hpp  range_constraint.hpp  range_cost_functor.hpp
task8/launch/: fls.launch.xml
task8/src/: beacon_node.cpp  beacon_sensor_model.cpp  range_constraint.cpp
workshop_msgs/: CMakeLists.txt  package.xml
workshop_msgs/msg/: BeaconRange.msg  BeaconRangeArray.msg
